--- a/style.css
+++ b/style.css
@@ -15,3 +15,12 @@ justify-content:center;
     background-color:yellow;
 }
 
+main{
+    display: flex;
+    justify-content:center;
+}
+.button{
+    color: brown;
+    background-color: green;
+    padding:10px;
+}
