--- a/instructions.css
+++ b/instructions.css
@@ -2,18 +2,10 @@
 
     background-color: #EEEEEE;
     margin: auto;
-
-    background-size: contain;
+    background-image: url(nst.jpg);
+    background-size: cover;
 
 }
-
-
-body{
-    background-image: url(back.jpg)
-    
-}
-
-
 
 .container1 {
     display: flex;
